# stavr

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVLOG.md  Dockerfile  NOTICE  OVERNIGHT_TASK_2026_05_17.md  OVERNIGHT_TASK_2026_05_17_polish.md  README.md  REBRAND-NEXT-STEPS.md  SECURITY.md  ecosystem.config.cjs  package-lock.json  package.json  sea-config.json  tsconfig.json  vitest.config.ts
adr/: 000-template.md  001-stdio-and-sse-dual-transport.md  002-sqlite-not-postgres.md  003-gh-cli-not-octokit.md  004-zod-for-event-validation.md  005-per-spawn-architecture-v01.md  006-daemon-binds-127001-only.md  007-eaddrinuse-graceful-fallback.md  008-write-actions-await-decision.md  009-stdio-sse-shim.md  012-event-driven-over-polling.md  013-single-workers-table-with-type-discriminator.md  014-spawner-static-registry.md  015-federation-readiness-design-constraint.md  016-cc-worker-uses-git-worktree-isolation.md  017-a2a-protocol-decision.md  020-daemon-watchdog.md  (+25 more)
governor/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
governor/installers/: stavr-governor-install.ps1  stavr-governor-install.sh
governor/scripts/: dev-sign.ps1  dev-sign.sh  gen-sbom.ps1  gen-sbom.sh  gen_icons.py  install-from-release.ps1  install-from-release.sh  verify-release.ps1  verify-release.sh
governor/src/: actions.rs  event_bridge.rs  event_router.rs  heartbeat.rs  icons.rs  lib.rs  main.rs  notification.rs  port_check.rs  restart.rs  service.rs  state.rs  supervisor.rs  tray.rs
(+797 files in other folders)
